Added footer and fixed tests
