# src/models/dto/admin/create-footer.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsUUID } from 'class-validator';
+
+export class CreateFooterDto {
+  @IsUUID()
+  @ApiProperty()
+  user: string;
+}
